<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.onap.so</groupId>
        <artifactId>so</artifactId>
        <version>1.19.0</version>
    </parent>
    <groupId>org.onap.so.adapters.so-oof-adapter</groupId>
    <artifactId>so-oof-adapter</artifactId>
    <version>1.12.0-SNAPSHOT</version>
    <name>SO OOF Adapter</name>
    <packaging>pom</packaging>

    <properties>
        <swagger.rt.rs.version>3.1.7</swagger.rt.rs.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.9.0</version>
                <executions>
                    <execution>
                        <id>format-java</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </execution>
                    <execution>
                        <id>format-xml</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <skip>true</skip>
                            <includes>
                                <include>pom.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>validate-java</id>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </execution>
                    <execution>
                        <id>validate-poms</id>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                        <configuration>
                            <skip>true</skip>
                            <includes>
                                <include>pom.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>



    <modules>
        <module>so-oof-adapter-application</module>
        <module>packages</module>
    </modules>
</project>
